--- a/RSS-Virtual-Keyboard/style.css
+++ b/RSS-Virtual-Keyboard/style.css
@@ -52,21 +52,94 @@ h1, h2, h3, h4, h5, h6 {font-size: inherit; font-weight: 400;}
 }
 
 .keyboard {
-    padding: 200px;
+    padding: 50px 170px;
+    
+    background-color: rgba(128, 128, 128, 0.114);
 }
 
-/* .keyboard_input {
+.keyboard_input-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
 
+.keyboard_input {
+    height: 300px;
+    width: 100%;
+    border: 2px solid rgb(16, 69, 115);
+    border-radius: 10px;
+
+    background-color: rgba(240, 248, 255, 0.555);
 }
 
 .keyboard_container {
+    display: flex;
+    flex-direction: column;
+    border: 3px solid rgb(16, 69, 115);
+    border-radius: 10px;
 
+    background-color: rgb(236, 246, 255);
+    box-shadow: 0px 2px 15px 4px rgba(13, 13, 13, 0.167);
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
 }
 
 .keyboard_key-container {
+    max-width: 60px;
+    width: 100%;
+    height: 50px;
+    margin: 8px 8px;
+    border-radius: 5px;
 
+    transition: 0.2s;
+}
+
+.keyboard_key-container__extra-middle-wide {
+    max-width: 80px;
+    width: 100%;
+}
+
+.keyboard_key-container__extra-semi-big-wide {
+    max-width: 135px;
+    width: 100%;
+}
+
+.keyboard_key-container__extra-big-wide {
+    max-width: 150px;
+    width: 100%;
+}
+
+.keyboard_key-container__space {
+    max-width: 485px;
+    width: 100%;
+}
+
+.keyboard_key-container:hover {
+    box-shadow: 0px 2px 15px 4px rgba(13, 13, 13, 0.167);
 }
 
 .keyboard_key {
+    width: 100%;
+    height: 100%;
+    border: 2px solid rgb(16, 69, 115);
+    border-radius: 5px;
+    
+    background-color: aliceblue;
+    box-shadow: 0px 1px 5px 2px rgba(1, 63, 108, 0.094);
 
-} */
+    transition: 0.2s;
+}
+
+.keyboard_key__dark {
+    background-color: rgb(155, 188, 218);
+}
+
+.keyboard_key:hover {
+    font-size: 110%;
+    letter-spacing: 0.05rem;
+
+    background-color: rgb(207, 230, 250);
+}
