--- a/RSS-Virtual-Keyboard/style.css
+++ b/RSS-Virtual-Keyboard/style.css
@@ -57,17 +57,21 @@ h1, h2, h3, h4, h5, h6 {font-size: inherit; font-weight: 400;}
     background-color: rgba(128, 128, 128, 0.114);
 }
 
-.input_container {
+.textarea_container {
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
 }
 
-.input {
+.textarea {
     height: 300px;
     width: 100%;
     border: 2px solid rgb(16, 69, 115);
     border-radius: 10px;
+    padding: 20px;
+
+    font-family: inherit;
+    font-size: 2rem;
 
     background-color: rgba(240, 248, 255, 0.555);
 }
